--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 DB_HOST=localhost
-DB_USER=username
-DB_PASSWORD=password
-DB_DATABASE=database
+DB_USER=alfaram
+DB_PASSWORD=592266
+DB_DATABASE=pvm_db
 PORT=3001
